<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Find Me
    </string>
    <string name="hello_world">Test</string>
    <string name="title_activity_settings">Settings</string>
    <string name="number">Number:</string>
    <string name="passphrase">Password:</string>
    <string name="settings_description">Who can request your location?
    </string>
    <string name="app_description">This application lets your friends and family find you in an
        emergency. Your GPS location will be sent when you receive an SMS from a registered emergency
        contact number. The message must contain the password exactly as you set it here.</string>
    <string name="service_on_off_switch">Turn listening service on?</string>
    <string name="settings_saved">Settings saved</string>
    <string name="listener_on">Listening for incoming location requests</string>
    <string name="listener_off">Blocking all incoming location requests</string>
    <string name="about">About</string>

</resources>
